--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/migrate",
-  "version": "0.4.5",
+  "version": "0.5.0",
   "description": "Migration program from swagger to NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -30,10 +30,13 @@
   },
   "homepage": "https://github.com/samchon/nestia#readme",
   "devDependencies": {
-    "@nestia/core": "^2.3.3",
-    "@nestia/fetcher": "^2.3.3",
+    "@nestia/core": "^2.3.10",
+    "@nestia/fetcher": "^2.3.10",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.3.3",
+    "dotenv": "^16.3.1",
+    "dotenv-expand": "^10.0.0",
     "prettier": "^2.8.8",
     "rimraf": "^5.0.1",
     "serialize-error": "^4.1.0",
