--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -7,7 +7,7 @@
     "build": "rimraf bin && tsc",
     "generate": "ts-node src/generate",
     "start": "npm run build && node bin",
-    "prepare": "ts-patch install"
+    "prepare": "ts-patch install && typia patch"
   },
   "repository": {
     "type": "git",
@@ -24,8 +24,8 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/core": "^2.2.1-dev.20231012",
-    "typia": "^5.2.6"
+    "@nestia/core": "^2.4.0",
+    "typia": "^5.3.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
@@ -47,6 +47,6 @@
     "ts-node": "^10.9.1",
     "ts-patch": "^3.0.2",
     "tstl": "^2.5.13",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.2"
   }
 }
