--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/core",
-  "version": "2.3.12",
+  "version": "2.4.0",
   "description": "Super-fast validation decorators of NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -12,7 +12,7 @@
     "package:latest": "npm run build && npm publish --access public",
     "package:next": "npm run package:latest -- --tag next",
     "prettier": "prettier ./**/*.ts --write",
-    "prepare": "ts-patch install"
+    "prepare": "ts-patch install && typia patch"
   },
   "repository": {
     "type": "git",
@@ -34,7 +34,7 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "^2.3.12",
+    "@nestia/fetcher": "^2.4.0",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "@nestjs/platform-express": ">=7.0.1",
@@ -44,10 +44,10 @@
     "raw-body": ">=2.0.0",
     "reflect-metadata": ">=0.1.12",
     "rxjs": ">=6.0.0",
-    "typia": "^5.2.6"
+    "typia": "^5.3.0"
   },
   "peerDependencies": {
-    "@nestia/fetcher": ">=2.3.12",
+    "@nestia/fetcher": ">=2.4.0",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "@nestjs/platform-express": ">=7.0.1",
@@ -55,8 +55,8 @@
     "raw-body": ">=2.0.0",
     "reflect-metadata": ">=0.1.12",
     "rxjs": ">=6.0.0",
-    "typescript": ">=4.8.0 <5.3.0",
-    "typia": ">=5.2.6 <6.0.0"
+    "typescript": ">=4.8.0 <5.4.0",
+    "typia": ">=5.3.0 <6.0.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
@@ -76,7 +76,7 @@
     "ts-node": "^10.9.1",
     "ts-patch": "^3.0.2",
     "tstl": "^2.5.13",
-    "typescript": "^5.2.2",
+    "typescript": "^5.3.2",
     "typescript-transform-paths": "^3.4.6"
   },
   "files": [
