--- a/packages/e2e/package.json
+++ b/packages/e2e/package.json
@@ -8,7 +8,7 @@
     "dev": "npm run build -- --watch",
     "eslint": "eslint src",
     "prettier": "prettier --write ./src/**/*.ts",
-    "prepare": "ts-patch install",
+    "prepare": "ts-patch install && typia patch",
     "test": "node lib/test"
   },
   "repository": {
@@ -39,8 +39,8 @@
     "rimraf": "^4.1.2",
     "ts-node": "^10.9.1",
     "ts-patch": "^3.0.2",
-    "typescript": "^5.2.2",
-    "typia": "^5.2.6"
+    "typescript": "^5.3.2",
+    "typia": "^5.3.0"
   },
   "dependencies": {
     "chalk": "^4.1.2",
