--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/migrate",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "Migration program from swagger to NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "rimraf lib && tsc",
     "dev": "npm run build -- --watch",
-    "prepare": "ts-patch install && ts-node src/executable/bundle.ts",
+    "prepare": "ts-patch install && typia patch && ts-node src/executable/bundle.ts",
     "test": "node lib/test"
   },
   "repository": {
@@ -30,8 +30,8 @@
   },
   "homepage": "https://github.com/samchon/nestia#readme",
   "devDependencies": {
-    "@nestia/core": "^2.3.10",
-    "@nestia/fetcher": "^2.3.10",
+    "@nestia/core": "^2.4.0",
+    "@nestia/fetcher": "^2.4.0",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/express": "^4.17.21",
     "@types/node": "^20.3.3",
