--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/core",
-  "version": "0.0.0-dev.20991231",
+  "version": "2.4.2",
   "description": "Super-fast validation decorators of NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -39,7 +39,7 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "D:\\github\\samchon\\nestia\\packages\\fetcher\\nestia-fetcher-0.0.0-dev.20991231.tgz",
+    "@nestia/fetcher": "^2.4.2",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "@nestjs/platform-express": ">=7.0.1",
@@ -52,7 +52,7 @@
     "typia": "^5.3.4"
   },
   "peerDependencies": {
-    "@nestia/fetcher": ">=0.0.0-dev.20991231",
+    "@nestia/fetcher": ">=2.4.2",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "@nestjs/platform-express": ">=7.0.1",
@@ -79,7 +79,7 @@
     "prettier": "^2.8.7",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
-    "ts-patch": "^3.0.2",
+    "ts-patch": "^3.1.0",
     "tstl": "^2.5.13",
     "typescript": "^5.3.2",
     "typescript-transform-paths": "^3.4.6"
