--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "3.2.0",
+  "version": "3.2.1",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -32,7 +32,7 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "../fetcher/nestia-fetcher-3.2.0.tgz",
+    "@nestia/fetcher": "^3.2.1",
     "@samchon/openapi": "^0.1.21",
     "cli": "^1.0.1",
     "get-function-location": "^2.0.0",
@@ -46,7 +46,7 @@
     "typia": "^6.0.3"
   },
   "peerDependencies": {
-    "@nestia/fetcher": ">=3.2.0",
+    "@nestia/fetcher": ">=3.2.1",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "reflect-metadata": ">=0.1.12",
@@ -54,7 +54,7 @@
     "typia": ">=6.0.3 <7.0.0"
   },
   "devDependencies": {
-    "@nestia/e2e": "^0.4.1",
+    "@nestia/e2e": "^0.4.3",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/cli": "^0.11.21",
     "@types/express": "^4.17.15",
@@ -68,7 +68,7 @@
     "eslint-plugin-deprecation": "^1.4.1",
     "rimraf": "^3.0.2",
     "tgrid": "^1.0.0",
-    "ts-patch": "^3.1.2",
+    "ts-patch": "^3.2.0",
     "typescript": "^5.4.5",
     "typescript-transform-paths": "^3.4.4",
     "uuid": "^9.0.0"
