--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -44,10 +44,12 @@
     "@nestjs/platform-express": "^10.3.8",
     "@nestjs/platform-fastify": "^10.3.8",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/cli-progress": "^3.11.5",
     "@types/express": "^4.17.21",
     "@types/inquirer": "^9.0.7",
     "@types/node": "^20.3.3",
     "@types/swagger-ui-express": "^4.1.6",
+    "cli-progress": "^3.12.0",
     "dotenv": "^16.3.1",
     "dotenv-expand": "^10.0.0",
     "express": "^4.19.2",
@@ -55,6 +57,7 @@
     "serialize-error": "^4.1.0",
     "source-map-support": "^0.5.21",
     "swagger-ui-express": "^5.0.0",
+    "tgrid": "^1.0.1",
     "ts-node": "^10.9.1",
     "ts-patch": "^3.1.0",
     "typescript-transform-paths": "^3.4.6"
@@ -66,7 +69,7 @@
     "prettier": "^3.2.5",
     "tstl": "^3.0.0",
     "typescript": "^5.4.5",
-    "typia": "^6.0.5"
+    "typia": "^6.1.1"
   },
   "files": [
     "lib",
