--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -32,7 +32,7 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "^3.2.3",
+    "@nestia/fetcher": "../fetcher/nestia-fetcher-3.2.3.tgz",
     "@samchon/openapi": "^0.1.21",
     "cli": "^1.0.1",
     "get-function-location": "^2.0.0",
