--- a/packages/fetcher/package.json
+++ b/packages/fetcher/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/fetcher",
-  "version": "3.3.2",
+  "version": "3.4.0",
   "description": "Fetcher library of Nestia SDK",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -41,5 +41,8 @@
     "package.json",
     "lib",
     "src"
-  ]
+  ],
+  "dependencies": {
+    "@samchon/openapi": "^0.2.2"
+  }
 }
