--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -61,7 +61,6 @@
     "typia": ">=6.3.1 <7.0.0"
   },
   "devDependencies": {
-    "@fastify/multipart": "^8.1.0",
     "@nestjs/common": "^10.3.3",
     "@nestjs/core": "^10.3.3",
     "@types/express": "^4.17.15",
@@ -76,6 +75,7 @@
     "comment-json": "^4.2.3",
     "eslint-plugin-deprecation": "^1.4.1",
     "fastify": "^4.25.2",
+    "fastify-multer": "^2.0.3",
     "git-last-commit": "^1.0.1",
     "inquirer": "^8.2.5",
     "rimraf": "^3.0.2",
