--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "3.6.1",
+  "version": "3.7.0-dev.20240711",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -32,8 +32,8 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "^3.6.1",
-    "@nestia/core": "^3.6.1",
+    "@nestia/fetcher": "^3.7.0-dev.20240711",
+    "@nestia/core": "^3.7.0-dev.20240711",
     "@samchon/openapi": "^0.3.4",
     "cli": "^1.0.1",
     "get-function-location": "^2.0.0",
@@ -47,8 +47,8 @@
     "typia": "^6.4.3"
   },
   "peerDependencies": {
-    "@nestia/fetcher": ">=3.6.1",
-    "@nestia/core": ">=3.6.1",
+    "@nestia/fetcher": ">=3.7.0-dev.20240711",
+    "@nestia/core": ">=3.7.0-dev.20240711",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "reflect-metadata": ">=0.1.12",
