--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -32,8 +32,8 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "^3.7.2-dev.20240720",
-    "@nestia/core": "^3.7.2-dev.20240720",
+    "@nestia/fetcher": "../fetcher/nestia-fetcher-3.7.2-dev.20240720.tgz",
+    "@nestia/core": "../core/nestia-core-3.7.2-dev.20240720.tgz",
     "@samchon/openapi": "^0.4.2",
     "cli": "^1.0.1",
     "get-function-location": "^2.0.0",
