--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@nestia/station",
-  "version": "3.7.2-dev.20240720",
+  "version": "3.7.2",
   "description": "Nestia station",
   "scripts": {
     "build": "node build/index.js",
