--- a/website/package.json
+++ b/website/package.json
@@ -27,9 +27,9 @@
     "@samchon/openapi": "^0.4.2",
     "@stackblitz/sdk": "^1.9.0",
     "js-yaml": "^4.1.0",
-    "next": "14.1.1",
-    "nextra": "latest",
-    "nextra-theme-docs": "latest",
+    "next": "14.2.5",
+    "nextra": "^2.13.4",
+    "nextra-theme-docs": "^2.13.4",
     "prettier": "^3.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
