--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "3.10.0-dev.20240803",
+  "version": "3.10.0-dev.20240803-2",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -32,8 +32,8 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/core": "^3.10.0-dev.20240803",
-    "@nestia/fetcher": "^3.10.0-dev.20240803",
+    "@nestia/core": "^3.10.0-dev.20240803-2",
+    "@nestia/fetcher": "^3.10.0-dev.20240803-2",
     "@samchon/openapi": "^0.4.3",
     "@wrtnio/openai-function-schema": "^0.2.3",
     "cli": "^1.0.1",
@@ -45,16 +45,16 @@
     "tsconfck": "^2.1.2",
     "tsconfig-paths": "^4.1.1",
     "tstl": "^3.0.0",
-    "typia": "^6.7.0-dev.20240803-4"
+    "typia": "^6.7.0-dev.20240803-5"
   },
   "peerDependencies": {
-    "@nestia/core": ">=3.10.0-dev.20240803",
-    "@nestia/fetcher": ">=3.10.0-dev.20240803",
+    "@nestia/core": ">=3.10.0-dev.20240803-2",
+    "@nestia/fetcher": ">=3.10.0-dev.20240803-2",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "reflect-metadata": ">=0.1.12",
     "ts-node": ">=10.6.0",
-    "typia": ">=6.7.0-dev.20240803-4 <7.0.0"
+    "typia": ">=6.7.0-dev.20240803-5 <7.0.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
