--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -32,8 +32,8 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/core": "^3.10.0",
-    "@nestia/fetcher": "^3.10.0",
+    "@nestia/core": "../core/nestia-core-3.10.0.tgz",
+    "@nestia/fetcher": "../fetcher/nestia-fetcher-3.10.0.tgz",
     "@samchon/openapi": "^0.4.3",
     "@wrtnio/openai-function-schema": "^0.2.3",
     "cli": "^1.0.1",
