--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -71,7 +71,7 @@
     "prettier": "^3.2.5",
     "tstl": "^3.0.0",
     "typescript": "^5.5.4",
-    "typia": "^6.7.0"
+    "typia": "^6.8.0-dev.20240812"
   },
   "files": [
     "lib",
