--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "3.11.0-dev.20240813-11",
+  "version": "3.11.0-dev.20240814",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -32,7 +32,8 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": ">=3.11.0-dev.20240813-11",
+    "@nestia/core": "^3.11.0-dev.20240814",
+    "@nestia/fetcher": "^3.11.0-dev.20240814",
     "@samchon/openapi": "^0.4.5",
     "@wrtnio/openai-function-schema": "^0.2.3",
     "cli": "^1.0.1",
@@ -44,10 +45,11 @@
     "tsconfck": "^2.1.2",
     "tsconfig-paths": "^4.1.1",
     "tstl": "^3.0.0",
-    "typia": ">=6.8.0 <7.0.0"
+    "typia": "^6.8.0"
   },
   "peerDependencies": {
-    "@nestia/fetcher": ">=3.11.0-dev.20240813-11",
+    "@nestia/core": ">=3.11.0-dev.20240814",
+    "@nestia/fetcher": ">=3.11.0-dev.20240814",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "reflect-metadata": ">=0.1.12",
