--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestia",
-  "version": "5.7.0-dev.20240814",
+  "version": "5.7.0",
   "description": "Nestia CLI tool",
   "main": "bin/index.js",
   "bin": {
