--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@nestia/station",
-  "version": "3.12.0-dev.20240827",
+  "version": "3.12.0",
   "description": "Nestia station",
   "scripts": {
     "build": "node build/index.js",
